--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,5 +1,10 @@
 <html>
 <p>Hello from Django application</p>
 <p>{{hello_message}}</p>
-<p>{{request.user}}</p>
+<!--<p>{{request.user}}</p>-->
+<form action="" method="post" accept-charset="utf-8">    
+    {%csrf_token%}
+    {{ form.as_p }}
+    <p><input type="submit" value="Register"></p>
+</form>    
 </html>
