--- a/home/templates/students.html
+++ b/home/templates/students.html
@@ -18,7 +18,26 @@
     <![endif]-->
   </head>
     <body>
-        <p>{{students}}</p>
+        {% for student in students %}
+            {{student.full_name}}
+        {% endfor %}
+
+        <table class="table">
+            <tr><th>Fullname</th>
+            <th>Age</th>
+            <th>Email</th>
+            <th>Interests</th>
+            {% for student in students %}
+                <tr>
+            <td>{{student.full_name}}</td>
+            <td>{{student.age}}</td>
+            <td>{{student.email}}</td>
+            <td>{{student.interest}}</td>
+                </tr>
+            {% endfor %}
+
+            </tr>
+        </table>
     </body>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
