--- a/home/templates/students.html
+++ b/home/templates/students.html
@@ -27,12 +27,15 @@
             <th>Age</th>
             <th>Email</th>
             <th>Interests</th>
+            <th>Last updated</th>
             {% for student in students %}
                 <tr>
-            <td>{{student.full_name}}</td>
-            <td>{{student.age}}</td>
-            <td>{{student.email}}</td>
-            <td>{{student.interest}}</td>
+
+            <td>    {{student.full_name}}</td>
+            <td>    {{student.age}}</td>
+            <td>    {{student.email}}</td>
+            <td>    {{student.interest}}</td>
+            <td>    {{student.last_update | timesince}}</td>
                 </tr>
             {% endfor %}
 
