setting up email and account confirmation logic

--- a/home/templates/students.html
+++ b/home/templates/students.html
@@ -18,6 +18,7 @@
     <![endif]-->
   </head>
     <body>
+        <p>Welcome {{request.user}}</p>
         {% for student in students %}
             {{student.full_name}}
         {% endfor %}
